# lcd

./: .gitignore  .gitmodules  CMakeLists.txt  conanfile.py  signal.cpp  signal.h
interfaces/: i_backlight_control_interface.h  i_lcd_controller.h  i_lcd_controller_simplified.h  i_lcd_draw_interface.h  i_lcd_drawer_interface.h  i_lcd_interface.h  i_observable_backlight_control_interface.h  i_pin_provider.h  lcd_typedefs.h
profiles/: linux_x64_debug  win_x64_debug  win_x64_release
src/: CMakeLists.txt
src/lcd_cli/: CMakeLists.txt  console_helper_win.h  i_console_helper.h  lcd_cli.cpp  lcd_console_drawer.cpp  lcd_console_drawer.h  lcd_console_drawer1.cpp
src/lcd_lib/: CMakeLists.txt  HD44780.cpp  HD44780.h  abstract_analog_pin.cpp  abstract_analog_pin.h  abstract_physical_interface.cpp  abstract_physical_interface.h  abstract_pin_provider.cpp  abstract_pin_provider.h  lcd.cpp  lcd.h  lcd_controller.h  observable_backlight_control.cpp  observable_backlight_control.h  pin_props.h  simple_backlight_control.cpp  simple_backlight_control.h  stdafx.h
src/lcd_lib/interface/: i_lcd_controller_interface.h  i_physical_interface.h  i_pin.h
src/lcd_windows_console_gui/: CMakeLists.txt  lcd_console_drawer.cpp  lcd_console_drawer.h
src/pch/: CMakeLists.txt  stdafx.h
unit_test/: CMakeLists.txt  physical_interface.cpp
