cmake_minimum_required(VERSION 3.6)

project(lcd VERSION 0.0.1 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)

# === Installing conan dependencies ============================================
if(NOT EXISTS ${CMAKE_CURRENT_BINARY_DIR}/conanbuildinfo.cmake)
	file(COPY ${CMAKE_SOURCE_DIR}/conanfile.py DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
	set(CMD)
	if(CONAN_REFERENCE)
		list(APPEND CMD "${CONAN_REFERENCE}")
	endif()
	if(CONAN_PROFILE)
		list(APPEND CMD "-pr")
		list(APPEND CMD "${CMAKE_SOURCE_DIR}/profiles/${CONAN_PROFILE}")
	endif()
	execute_process(
		COMMAND conan install . ${CMD} -g cmake
		WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
		RESULT_VARIABLE CONAN_INSTALL_SUCCESS
	)
	if(NOT CONAN_INSTALL_SUCCESS EQUAL 0)
		return()
	endif()
endif()

include(${CMAKE_CURRENT_BINARY_DIR}/conanbuildinfo.cmake)
conan_basic_setup(TARGETS)
# === Installing conan dependencies ============================================

add_subdirectory(src)
